--- a/components/Highlights/index.module.scss
+++ b/components/Highlights/index.module.scss
@@ -1,6 +1,6 @@
 .slides {
     overflow: hidden;
-    background: var(--arsenic);
+    background: var(--charcoal);
     height: 400px;
     &__item {
         color: var(--white);
