--- a/pages/about/index.module.scss
+++ b/pages/about/index.module.scss
@@ -23,12 +23,12 @@
             margin: 1rem auto 2rem auto;
         }
         &:nth-child(odd) {
-            background-color: var(--arsenic);
+            background-color: var(--charcoal);
             color: var(--sepia);
         }
         &:nth-child(even) {
             background-color: var(--sepia);
-            color: var(--arsenic);
+            color: var(--charcoal);
         }
     }
     &__service {
