--- a/components/Latest/index.module.scss
+++ b/components/Latest/index.module.scss
@@ -5,7 +5,7 @@
         font-size: 2.5rem;
         text-align: center;
         letter-spacing: 2px;
-        color: var(--arsenic);
+        color: var(--charcoal);
         margin: 0 0 3rem 0;
     }
     &__row {
@@ -17,10 +17,15 @@
         background-color: var(--gray20);
         max-height: 500px;
         max-width: 50%;
+        border-radius: 2px;
         small {
-            color: var(--arsenic);
             font-size: 0.9rem;
-            border-bottom: 4px solid var(--tomato);
+            padding: 0.5rem 1rem;
+            margin-left: -1rem;
+            color: var(--sepia);
+            background-color: var(--charcoal);
+            border-radius: 2px;
+            display: inline-block;
         }
         h3 {
             color: var(--arsenic);
