--- a/pages/blogs/index.module.scss
+++ b/pages/blogs/index.module.scss
@@ -8,7 +8,7 @@
     border-left: 4px solid var(--tomato);
     padding: 0.4rem 0.5rem;
     margin: 1.5rem 0;
-    background-color: var(--loblolly50);
+    background-color: var(--blueGray25);
     width: fit-content;
     border-radius: 2px;
 }
