--- a/pages/products/index.module.scss
+++ b/pages/products/index.module.scss
@@ -46,17 +46,19 @@
     }
     &__link {
         display: block;
-        padding: 1rem;
         background-color: var(--charcoal);
         border-top: 3px solid var(--tomato);
         border-right: 1px solid var(--tomato);
         box-shadow: 1px 3px 5px 1px var(--black40);
         color: var(--sepia);
-        letter-spacing: 2px;
         margin: 0 auto 1rem auto;
         width: fit-content;
         min-width: 150px;
         text-align: center;
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+        font-weight: 600;
+        letter-spacing: 1px;
     }
     @media screen and (max-width: 640px) {
         &__item {
