--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
 .App {
-  text-align: center;
+ align-items: center;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ padding: 3rem;
+}
+.wrapper {
+ align-items: center;
+ display: flex;
+ justify-content: center;
+ max-width: 100%;
+ background-color: #363942;
+ box-shadow: 8px 8px 20px 2px rgb(74 56 56 / 60%);
+ transition: opacity 0.625s ease 0s, transform 0.625s ease 0s;
+ color: white;
+ padding: 3rem 3rem 1rem;
+ border-radius: 0.875rem;
+}
+.inner {
+ width: 29rem;
+ max-width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.divider {
+ border: none;
+ border-radius: 0.5rem;
+ background: linear-gradient(66deg, rgba(232, 107, 77, 1) 40%, rgba(227, 162, 100, 1) 100%);
+ height: 4px;
+ box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.5);
+ margin: 2rem 0 4rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen and (max-width: 480px) {
+ .App {
+  padding: 3rem;
+ }
+ .wrapper {
+  padding: 2rem;
+  margin-top: 2rem;
+ }
+ .inner {
+  padding-top: 4rem;
+ }
 }
