--- a/src/components/Introduction/index.module.css
+++ b/src/components/Introduction/index.module.css
@@ -22,7 +22,7 @@
  color: rgba(227, 162, 100, 1);
  font-weight: 600;
  text-align: center;
- margin: 2rem 0;
+ margin: 1rem 0 2rem;
 }
 .socialList {
  display: flex;
