--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body::before {
  z-index: -1;
  top: 0;
  left: 0;
- background-image: linear-gradient(66deg, rgba(232, 107, 77, 1) 40%, rgba(227, 162, 100, 1) 100%);
+ background-image: linear-gradient(66deg, #ff6666 40%, #cc9966 100%);
 }
 code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
