--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -11,7 +11,7 @@
  justify-content: center;
  max-width: 100%;
  background-color: #363942;
- box-shadow: 8px 8px 20px 2px rgb(74 56 56 / 60%);
+ box-shadow: 8px 8px 20px 2px #4a3838;
  transition: opacity 0.625s ease 0s, transform 0.625s ease 0s;
  color: white;
  padding: 3rem 3rem 1rem;
@@ -20,15 +20,6 @@
 .inner {
  width: 29rem;
  max-width: 100%;
-}
-
-.divider {
- border: none;
- border-radius: 0.5rem;
- background: linear-gradient(66deg, rgba(232, 107, 77, 1) 40%, rgba(227, 162, 100, 1) 100%);
- height: 4px;
- box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.5);
- margin: 2rem 0 4rem;
 }
 
 @media screen and (max-width: 480px) {
