--- a/src/components/Contact/index.module.css
+++ b/src/components/Contact/index.module.css
@@ -12,7 +12,7 @@
  display: flex;
  justify-content: center;
  align-items: center;
- margin: 5rem auto 6rem;
+ margin: 5rem 0;
  width: fit-content;
  height: 60px;
  border-radius: 0.875rem;
@@ -78,20 +78,8 @@
  background: none;
 }
 
-@keyframes scaleIcon {
- 0% {
-  box-shadow: none;
- }
- 25% {
-  box-shadow: inset 3px 3px 6px 0px rgb(0, 0, 0, 0.4);
- }
- 50% {
-  box-shadow: inset 3px 3px 6px 0px rgb(0, 0, 0, 0.6);
- }
- 75% {
-  box-shadow: inset 3px 3px 6px 0px rgb(0, 0, 0, 0.4);
- }
- 100% {
-  box-shadow: none;
+@media screen and (max-width: 480px) {
+ .socialList {
+  gap: 1.4rem;
  }
 }
