--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,36 @@
 body {
- margin: 0;
- font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-  'Droid Sans', 'Helvetica Neue', sans-serif;
- -webkit-font-smoothing: antialiased;
- -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  font-family:
+    'Rubik',
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    'Roboto',
+    'Oxygen',
+    'Ubuntu',
+    'Cantarell',
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 body::before {
- content: '';
- position: fixed;
- height: 100%;
- width: 100%;
- z-index: -1;
- top: 0;
- left: 0;
- background-image: linear-gradient(66deg, #ff6666 40%, #cc9966 100%);
+  content: '';
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(66deg, #ff6666 40%, #cc9966 100%);
 }
 code {
- font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 .scrollBtn {
- display: flex;
- justify-content: center;
- margin: 3rem 0;
+  display: flex;
+  justify-content: center;
+  margin: 3rem 0;
 }
