--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,7 @@ body::before {
   background-image: linear-gradient(66deg, #ff6666 40%, #cc9966 100%);
 }
 
-.scrollBtn {
-  display: flex;
-  justify-content: center;
-  margin: 3rem 0;
+
+.progressbar {
+  background-color: #cc9966;
 }
